# PyFrac

./: .gitignore  LICENSE.TXT  Main.py  README.md  ReleaseNotes.md  ReleasesNotes.md  plotfigs.py  setup.py
TI_Kernel/: CMakeLists.txt  LICENSE.TXT  main.cpp
TI_Kernel/il/: Array.h  Array2C.h  Array2CView.h  Array2D.h  Array2DView.h  Array3C.h  Array3D.h  Array4C.h  Array4D.h  ArrayView.h  BandArray2C.h  Cg.h  CudaArray2D.h  Deque.h  Dynamic.h  File.h  Gmres.h  Info.h  LowerArray2D.h  Map.h  MapArray.h  Set.h  SmallArray.h  SparseMatrixCSR.h  StaticArray.h  StaticArray2C.h  StaticArray2D.h  StaticArray3D.h  StaticArray4D.h  Status.h  String.h  Timer.h  Tree.h  TriDiagonal.h  Type.h  UTF16String.h  UpperArray2D.h  algorithmArray.h  algorithmArray2D.h  blas.h  (+11 more)
TI_Kernel/il/algorithm/: algorithmArray.h  algorithmArray2D.h
TI_Kernel/il/benchmark/alignment/: alignment.h
TI_Kernel/il/benchmark/memory/: matrix_multiplication.cpp  matrix_multiplication.h
TI_Kernel/il/benchmark/parallel/map/: mandelbrot.h  vector_addition.h
TI_Kernel/il/benchmark/parallel/reduce/: kmeans_clustering.cpp  kmeans_clustering.h  kmeans_clustering_0.cpp  kmeans_clustering_0.h  kmeans_main.cpp  kmeans_main.h  scalar_product.h
TI_Kernel/il/benchmark/parallel/scan/: integrate.h  partial_sum.h
TI_Kernel/il/benchmark/tools/memory/: memory.h
TI_Kernel/il/benchmark/tools/timer/: Benchmark.h  Timer.h
TI_Kernel/il/benchmark/types/: 32-vs-64-bit-integers.cpp
TI_Kernel/il/container/1d/: Array.h  ArrayView.h  SmallArray.h  StaticArray.h
TI_Kernel/il/container/1d/_benchmark/: Array_il_vs_std_benchmark.h  alignment_benchmark.cpp  append_benchmark.cpp  append_benchmark.txt
TI_Kernel/il/container/1d/_test/: Array_test.cpp  Dummy_test.cpp  Dummy_test.h
TI_Kernel/il/container/2d/: Array2C.h  Array2CView.h  Array2D.h  Array2DView.h  BandArray2C.h  LowerArray2D.h  SparseMatrixCSR.h  StaticArray2C.h  StaticArray2D.h  TriDiagonal.h  UpperArray2D.h
TI_Kernel/il/container/2d/_test/: Array2C_test.cpp  Array2D_test.cpp
TI_Kernel/il/container/3d/: Array3C.h  Array3D.h  Array3DView.h  StaticArray3D.h
TI_Kernel/il/container/3d/_test/: Array3D_test.cpp
TI_Kernel/il/container/4d/: Array4C.h  Array4D.h  StaticArray4D.h
TI_Kernel/il/container/cuda/: cudaCopy.h
TI_Kernel/il/container/cuda/1d/: CudaArray.h
TI_Kernel/il/container/cuda/2d/: CudaArray2D.h  CudaSparseMatrixCSR.h
TI_Kernel/il/container/deque/: Deque.h
TI_Kernel/il/container/dynamic/: Dynamic.h  Type.h
TI_Kernel/il/container/dynamic/_benchmark/: Dynamic_benchmark.cpp
TI_Kernel/il/container/dynamic/_test/: Dynamic_test.cpp
TI_Kernel/il/container/hash/: HashFunction.h  Map.h  MapArray.h  Set.h
TI_Kernel/il/container/hash/_benchmark/: Map_il_vs_std_benchmark.h  Map_string_benchmark.cpp  town_benchmark.h
TI_Kernel/il/container/hash/_test/: Map_test.cpp
TI_Kernel/il/container/info/: Info.h  Status.h
TI_Kernel/il/container/info/_test/: Info_test.cpp
TI_Kernel/il/container/string/: String.h  UTF16String.h  algorithmString.h  unicode.h
TI_Kernel/il/container/string/_benchmark/: String_benchmark.h  String_il_vs_std_benchmark.h
TI_Kernel/il/container/string/_test/: StringView_test.cpp  String_test.cpp
TI_Kernel/il/container/tree/: Tree.h
TI_Kernel/il/container/tree/_test/: Tree_test.cpp
TI_Kernel/il/core/: core.h
TI_Kernel/il/core/_test/: Status_test.cpp
TI_Kernel/il/core/math/: safe_arithmetic.h
TI_Kernel/il/core/math/_test/: safe_arithmetic_test.cpp
TI_Kernel/il/core/memory/: allocate.h
TI_Kernel/il/io/: File.h  io_base.h
TI_Kernel/il/io/_test/: numpy_test.cpp
TI_Kernel/il/io/filepack/: filepack.h
TI_Kernel/il/io/format/: format.h  formatIL.h  ostream.h  print.cc
TI_Kernel/il/io/format/old/: format.h
TI_Kernel/il/io/numpy/: numpy.cpp  numpy.h
TI_Kernel/il/io/png/: png.cpp  png.h
TI_Kernel/il/io/ppm/: ppm.h
TI_Kernel/il/io/toml/: toml.cpp  toml.h
TI_Kernel/il/io/toml/_test/: TODO.txt  toml_valid_test.cpp
TI_Kernel/il/io/toml/_test/valid/: windows-lines.toml  zero.toml
TI_Kernel/il/linearAlgebra/: Matrix.h
TI_Kernel/il/linearAlgebra/cuda/dense/blas/: CublasHandle.h  cudaBlas.h  cudaDot.h
TI_Kernel/il/linearAlgebra/cuda/sparse/blas/: CusparseHandle.h  cudaSparseBlas.h
TI_Kernel/il/linearAlgebra/dense/: norm.h
TI_Kernel/il/linearAlgebra/dense/_test/: norm_test.cpp
TI_Kernel/il/linearAlgebra/dense/blas/: blas.h  blas_config.h  blas_static.h  cross.h  dot.h  solve.h
TI_Kernel/il/linearAlgebra/dense/blas/_benchmark/: blas_benchmark.cpp  linear_solve_benchmark.cpp  test.cpp
TI_Kernel/il/linearAlgebra/dense/blas/_test/: blas_test.cpp  cross_test.cpp  (+2 more)
TI_Kernel/il/linearAlgebra/dense/factorization/: Cholesky.h  Eigen.h  Householder.h  LU.h  Singular.h  linearSolve.h  luDecomposition.h  qrDecomposition.h
TI_Kernel/il/linearAlgebra/matrixFree/solver/: Cg.h  Gmres.h
TI_Kernel/il/linearAlgebra/sparse/blas/: SparseMatrixBlas.h  sparseBlas.h  sparseDot.h  sparseLinearAlgebra.h
TI_Kernel/il/linearAlgebra/sparse/factorization/: GmresIlu0.h  Pardiso.h
TI_Kernel/il/random/: sobol.h
TI_Kernel/il/unit/: time.h
TI_Kernel/src/: AssemblyDDM.cpp  AssemblyDDM.h  Selfcorr.cpp  Selfcorr.h  elasticity_kernel_integration.cpp  elasticity_kernel_integration.h  elasticity_kernel_isotropy.cpp  elasticity_kernel_isotropy.h  inputE.cpp  inputE.h  mesh.cpp  mesh.h  output.h
TI_Kernel/src/nlohmann/: adl_serializer.hpp  json.hpp
TI_Kernel/src/nlohmann/detail/: exceptions.hpp  macro_scope.hpp  macro_unscope.hpp
TI_Kernel/src/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
TI_Kernel/src/nlohmann/detail/input/: binary_reader.hpp  json_sax.hpp  lexer.hpp  parser.hpp
TI_Kernel/src/nlohmann/detail/iterators/: internal_iterator.hpp  iteration_proxy.hpp  iterator_traits.hpp
TI_Kernel/src/nlohmann/detail/meta/: type_traits.hpp
TI_Kernel/src/nlohmann/detail/output/: serializer.hpp
src_TI_Kernel/: AssemblyDDM.cpp  AssemblyDDM.h  CMakeLists.txt  Selfcorr.cpp  Selfcorr.h  elasticity_kernel_integration.cpp  elasticity_kernel_integration.h  inputE.cpp  inputE.h  main.cpp  mesh.cpp  mesh.h  output.h
(+783 files in other folders)
